--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "1.0.0",
   "main": "build/server.js",
   "license": "GPL-3.0",
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint",
+      "pre-push": "yarn test"
+    }
+  },
   "scripts": {
     "ts-node": "node -r tsconfig-paths/register -r ts-node/register -r dotenv/config",
     "start": "yarn ts-node --inspect=5858 src/server.ts",
@@ -14,16 +20,17 @@
     "lint:fix": "yarn lint --fix"
   },
   "devDependencies": {
-    "@chile-sh/eslint-config-ts": "^2.2.0",
+    "@chile-sh/eslint-config-ts": "^3.0.0",
     "@types/dotenv": "^6.1.1",
     "@types/ioredis": "^4.0.10",
     "@types/jest": "^24.0.12",
     "@types/node": "^12.0.0",
-    "@typescript-eslint/eslint-plugin": "^1.7.0",
-    "@typescript-eslint/parser": "^1.7.0",
-    "eslint": "^5.16.0",
+    "@typescript-eslint/eslint-plugin": "^2.2.0",
+    "@typescript-eslint/parser": "^2.2.0",
+    "eslint": "^6.3.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "husky": "^3.0.5",
     "jest": "^24.8.0",
     "prettier": "^1.17.0",
     "ts-jest": "^24.0.2",
