--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
   "devDependencies": {
     "@chile-sh/eslint-config-ts": "^3.0.0",
     "@types/dotenv": "^6.1.1",
-    "@types/ioredis": "^4.0.10",
+    "@types/ioredis": "^4.0.17",
     "@types/jest": "^24.0.12",
+    "@types/nanoid": "^2.0.0",
     "@types/node": "^12.0.0",
-    "@typescript-eslint/eslint-plugin": "^2.2.0",
-    "@typescript-eslint/parser": "^2.2.0",
+    "@typescript-eslint/eslint-plugin": "^1.7.0",
+    "@typescript-eslint/parser": "^1.7.0",
     "eslint": "^6.3.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.0.1",
@@ -43,6 +44,8 @@
     "@types/pino": "^5.8.10",
     "dotenv": "^7.0.0",
     "fastify": "^2.8.0",
+    "ioredis": "^4.14.1",
+    "nanoid": "^2.1.1",
     "pino": "^5.13.3"
   }
 }
