--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "@sentry/node": "5.6.2",
     "@types/pino": "^5.8.10",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "fastify": "^2.8.0",
     "ioredis": "^4.14.1",
